infrastructure/kubernetes/minikube/servers.yaml
apiVersion: v1
kind: Service
metadata:
  name: orcan-api
spec:
  selector:
    app: orcan-api
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orcan-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orcan-api
  template:
    metadata:
      labels:
        app: orcan-api
    spec:
      containers:
        - name: orcan-api
          image: pingucoin/orcan-api:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-api
spec:
  selector:
    app: payment-api
  ports:
    - port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      containers:
        - name: payment-api
          image: pingucoin/payment-api:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: pingu-api
spec:
  selector:
    app: pingu-api
  ports:
    - port: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingu-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingu-api
  template:
    metadata:
      labels:
        app: pingu-api
    spec:
      containers:
        - name: pingu-api
          image: pingucoin/pingu-api:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
